# dbt-sail

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  hatch.toml  pyproject.toml
.github/workflows/: build.yml  release.yml
src/dbt/adapters/sail/: __init__.py  connections.py  impl.py
src/dbt/include/sail/: dbt_project.yml  profile_template.yml
src/dbt/include/sail/macros/: adapters.sql
tests/functional/: conftest.py
tests/functional/adapter/: test_basic.py
tests/functional/adapter/dbt_show/: test_dbt_show.py
tests/functional/adapter/incremental/: test_incremental_on_schema_change.py
tests/functional/adapter/incremental_strategies/: test_incremental_strategies.py
tests/functional/adapter/utils/: test_utils.py
tests/unit/: conftest.py  test_adapter.py  test_adapter_telemetry.py  test_credentials.py  utils.py
tests/unit/fixtures/: profiles.py
