[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
dynamic = ["version"]
name = "dbt-sail"
description = "The Sail adapter plugin for dbt"
readme = "README.md"
keywords = [
    "dbt",
    "adapter",
    "adapters",
    "database",
    "elt",
    "dbt-core",
    "sail",
    "spark",
]
requires-python = ">=3.10,<3.15"
authors = [{ name = "LakeSail", email = "hello@lakesail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["dbt-spark[session]>=1.8,<2.0", "pysail"]

[project.optional-dependencies]
dev = ["dbt-tests-adapter", "pytest", "pytest-xdist"]

[project.urls]
Homepage = "https://github.com/lakehq/dbt-sail"
Repository = "https://github.com/lakehq/dbt-sail.git"
Issues = "https://github.com/lakehq/dbt-sail/issues"
Changelog = "https://github.com/lakehq/dbt-sail/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/functional"]
addopts = "-v --color=yes"
filterwarnings = [
    "ignore:.*'soft_unicode' has been renamed to 'soft_str'*:DeprecationWarning",
    "ignore:unclosed file .*:ResourceWarning",
]
